testsuite/tests/tlks/should_fail/tlks_fail023.stderr

tlks_fail023.hs:10:1: error:
    • The associated type ‘F’
      mentions none of the type or kind variables of the class ‘C a’
    • In the class declaration for ‘C’
